--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@
     color: #777;
 }
 
+body {
+    background-image: url("images/background.jpg");
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -80,6 +84,7 @@ html, body {
     max-width: 900px;
     margin: 0 auto;
     padding: 0 1.5em;
+
 }
 .section-header {
     font-family: "Metal Mania";
